--- a/en/index.html
+++ b/en/index.html
@@ -32,10 +32,11 @@
   <!-- CSS -->
   <link href='/assets/styles.css' rel='stylesheet' type='text/css'/>
 </head>
-<body class='page-cn'>
+<body class='page-en'>
   <header id='header'>
     <nav class='menu'>
-      <a href='#'>CN</a>
+      
+      <a href='/'>中文</a>
     </nav>
   </header>
 
@@ -46,7 +47,7 @@
 <header class='hero'>
   <div class='wrapper'>
     <h1>JSConf China</h1>
-    <p>21th-22th Jun, 2015, Shenzhen, China</p>
+    <p>Summer 2015 in Shenzhen, China</p>
   </div>
   <div id='parallax' class='parallax'>
     <ul id='scene' class='scene'>
@@ -63,15 +64,21 @@
 
 <section class='section action'>
   <div class='wrapper'>
-    <div class='countdown'>
-      <span class='days'><strong>50</strong> </span>
-      <span class='hours'><strong>5</strong> </span>
-      <span class='minutes'><strong>23</strong> </span>
-      <span class='seconds'><strong>43</strong> </span>
-    </div>
-    <img src='/images/line.png' class='line'>
-    <h2></h2>
-    <form action='http://wiredcraft.us2.list-manage1.com/subscribe/post?u=18eb8d6c34ad5d4e781541da9&amp;id=db875395f9' method='post' target='_blank'>
+    <!-- <div class='countdown'>
+      <span class='days'><strong>50</strong> days</span>
+      <span class='hours'><strong>5</strong> hours</span>
+      <span class='minutes'><strong>23</strong> minutes</span>
+      <span class='seconds'><strong>43</strong> seconds</span>
+    </div> -->
+    <!-- <img src='/images/line.png' class='line'> -->
+    <h2>Leave us your email, we&#39;ll keep you posted</h2>
+    
+
+
+
+
+
+<form action='http://wiredcraft.us2.list-manage1.com/subscribe/post?u=18eb8d6c34ad5d4e781541da9&amp;id=ce3898dd2e' method='post' target='_blank'>
   <div class='field'>
     <input type='email' value='' name='EMAIL' class='required email' placeholder='Your email address'/>
   </div>
@@ -90,8 +97,11 @@
 <section class='section info'>
   <div class='wrapper'>
     <div class='about'>
-      <h2></h2>
-      <p></p>
+      <h2>About ShenJS</h2>
+      <p><p>JSConf China is a two day conference focused on JavaScript and Node.js technologies. This developer driven event brings together notable figures from both the Chinese and international JavaScript communities to share their knowledge and passion for JavaScript. After Shanghai, Beijing and Hangzhou, JSConf China is going to Shenzhen in the summer 2015.</p>
+<p>Wanna help out? <a href='https://github.com/JSConfcn/ShenJS/issues'>Join us on GitHub</a>!</p>
+<p><small><a href='http://JSConf.cn/'>Learn more about JSConf China</a></small>.</p>
+</p>
     </div>
     <div class='map'>
       <img src='/images/map.png'>
@@ -104,7 +114,7 @@
 
   <footer id='footer'>
     <a href='http://jsconfcn.com'>JSConf.cn</a>
-<a href='#'>CCA 3.0 License</a>
+<a href='https://creativecommons.org/licenses/by/3.0/'>CCA 3.0 License</a>
 <a href='http://wiredcraft.com'>Built by Wiredcraft</a>
   </footer>
 
