--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset='utf-8'/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 
-  <title>JS conference in Shenzhen | ShenJS</title>
+  <title>深圳JS会议 | ShenJS</title>
 
   <meta http-equiv='Content-Language' content='en'/>
   <meta name='keywords' content='Wiredcraft, Metalsmith.io, static website, Gulp'/>
@@ -35,7 +35,8 @@
 <body class='page-front'>
   <header id='header'>
     <nav class='menu'>
-      <a href='#'>CN</a>
+      <a href='/en'>EN</a>
+      
     </nav>
   </header>
 
@@ -45,8 +46,8 @@
 
 <header class='hero'>
   <div class='wrapper'>
-    <h1>JSConf China</h1>
-    <p>21th-22th Jun, 2015, Shenzhen, China</p>
+    <h1>JSConf中国</h1>
+    <p>2015年夏天在中国深圳</p>
   </div>
   <div id='parallax' class='parallax'>
     <ul id='scene' class='scene'>
@@ -63,20 +64,26 @@
 
 <section class='section action'>
   <div class='wrapper'>
-    <div class='countdown'>
-      <span class='days'><strong>50</strong> days</span>
-      <span class='hours'><strong>5</strong> hours</span>
-      <span class='minutes'><strong>23</strong> minutes</span>
-      <span class='seconds'><strong>43</strong> seconds</span>
-    </div>
-    <img src='/images/line.png' class='line'>
-    <h2>Leave us your email, we&#39;ll keep you posted</h2>
-    <form action='http://wiredcraft.us2.list-manage1.com/subscribe/post?u=18eb8d6c34ad5d4e781541da9&amp;id=db875395f9' method='post' target='_blank'>
+    <!-- <div class='countdown'>
+      <span class='days'><strong>50</strong> 天</span>
+      <span class='hours'><strong>5</strong> 小时</span>
+      <span class='minutes'><strong>23</strong> 分钟</span>
+      <span class='seconds'><strong>43</strong> 秒</span>
+    </div> -->
+    <!-- <img src='/images/line.png' class='line'> -->
+    <h2>留下您的邮箱，我们会及时向大家发布</h2>
+    
+
+
+
+
+
+<form action='http://wiredcraft.us2.list-manage1.com/subscribe/post?u=18eb8d6c34ad5d4e781541da9&amp;id=ce3898dd2e' method='post' target='_blank'>
   <div class='field'>
-    <input type='email' value='' name='EMAIL' class='required email' placeholder='Your email address'/>
+    <input type='email' value='' name='EMAIL' class='required email' placeholder='您的电子邮件地址'/>
   </div>
   <div class='field'>
-    <input type='submit' value='Subscribe' name='subscribe' class='button'/>
+    <input type='submit' value='订阅' name='subscribe' class='button'/>
   </div>
 </form>
     <nav class='social'>
@@ -90,8 +97,11 @@
 <section class='section info'>
   <div class='wrapper'>
     <div class='about'>
-      <h2>About ShenJS</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <h2>关于ShenJS</h2>
+      <p><p>JSConf中国是一个两天的会议侧重于JavaScript和Node.js的技术。该开发者驱动的事件汇集了著名人物无论从中国和国际的JavaScript社区分享他们的知识的JavaScript和激情。上海，北京和杭州之后，JSConf中国将深圳在2015年的夏天。</p>
+<p>想帮帮忙？<a href='https://github.com/JSConfcn/ShenJS/issues'>加入我们在GitHub上</a>！</p>
+<p><small><a href='http://JSConf.cn/'>了解更多关于JSConf中国</a></small>。</p>
+</p>
     </div>
     <div class='map'>
       <img src='/images/map.png'>
@@ -104,7 +114,7 @@
 
   <footer id='footer'>
     <a href='http://jsconfcn.com'>JSConf.cn</a>
-<a href='#'>CCA 3.0 License</a>
+<a href='https://creativecommons.org/licenses/by/3.0/'>CCA 3.0 License</a>
 <a href='http://wiredcraft.com'>Built by Wiredcraft</a>
   </footer>
 
