--- a/team/borat/index.html
+++ b/team/borat/index.html
@@ -35,7 +35,8 @@
 <body class='page-team/borat'>
   <header id='header'>
     <nav class='menu'>
-      <a href='#'>CN</a>
+      
+      
     </nav>
   </header>
 
@@ -45,7 +46,7 @@
 
   <footer id='footer'>
     <a href='http://jsconfcn.com'>JSConf.cn</a>
-<a href='#'>CCA 3.0 License</a>
+<a href='https://creativecommons.org/licenses/by/3.0/'>CCA 3.0 License</a>
 <a href='http://wiredcraft.com'>Built by Wiredcraft</a>
   </footer>
 
