--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang='zh'>
 <head>
   <meta charset='utf-8'/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
@@ -7,8 +7,9 @@
   <title>深圳JS会议 | ShenJS</title>
 
   <meta http-equiv='Content-Language' content='en'/>
-  <meta name='keywords' content='Wiredcraft, Metalsmith.io, static website, Gulp'/>
-  <meta name='description' content='A simple static website boilerplate with Metalsmith &amp; Gulp'/>
+  <meta name='keywords' content='Javascript, Node.js, realtime, JSconf, Shenzhen, China, conference'/>
+  <meta name='description' content='我们一起在深圳，中国的主要的Javascript会议今年夏天。'/>
+  
   
   <!-- Favicons -->
   <link rel='shortcut icon' href='/assets/favicons/favicon.ico'>
