Chinese copy review

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 <form action='http://wiredcraft.us2.list-manage1.com/subscribe/post?u=18eb8d6c34ad5d4e781541da9&amp;id=ce3898dd2e' method='post' target='_blank'>
   <div class='field'>
-    <input type='email' value='' name='EMAIL' class='required email' placeholder='您的电子邮件地址'/>
+    <input type='email' value='' name='EMAIL' class='required email' placeholder='你的邮箱地址'/>
   </div>
   <div class='field'>
     <input type='submit' value='订阅' name='subscribe' class='button'/>
