--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   </section>
 
   <footer id='footer'>
-    <a href='http://jsconfcn.com'>JSConf.cn</a>
+    <a href='http://jsconf.cn'>JSConf.cn</a>
 <a href='https://creativecommons.org/licenses/by/3.0/'>CCA 3.0 License</a>
 <a href='http://wiredcraft.com'>Built by Wiredcraft</a>
   </footer>
