Capitalization and link target

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <meta http-equiv='Content-Language' content='en'/>
   <meta name='keywords' content='Javascript, Node.js, realtime, JSconf, Shenzhen, China, conference'/>
-  <meta name='description' content='今年夏天，我们一起在深圳，中国主要的Javascript会议'/>
+  <meta name='description' content='今年夏天中国主要的JavaScript会议，我们一起在深圳'/>
   
   
   <!-- Favicons -->
@@ -99,10 +99,10 @@
 <section class='section info'>
   <div class='wrapper'>
     <div class='about'>
-      <h2>关于ShenJS</h2>
-      <p><p>JS中国开发者大会是一场专注于JavaScript和Node.js技术，为期两天的国际性技术大会。届时，大会会邀请国内外的优秀讲师为大家分享在JavaScript和Node.js技术方面的经验。继上海，北京和杭州之后，JSConf中国开发者大会将于2015年夏天在深圳召开。</p>
+      <h2>关于深JS</h2>
+      <p><p>深JS——2015 JS中国开发者大会是一场专注于JavaScript和Node.js技术，为期两天的国际性技术大会。届时，大会会邀请国内外的优秀讲师为大家分享在JavaScript和Node.js技术方面的经验。继上海，北京和杭州之后，JS中国开发者大会将于2015年夏天在深圳召开。</p>
 <p>想参与讨论？<a href='https://github.com/JSConfcn/ShenJS/issues' target="new">在GitHub上加入我们</a>！</p>
-<p><small><a href='http://JSConf.cn/' target="new">了解更多关于JSConf中国开发者大会</a></small></p>
+<p><small><a href='http://JSConf.cn/' target="new">了解更多关于JS中国开发者大会</a></small></p>
 </p>
     </div>
     <div class='map'>
@@ -115,9 +115,9 @@
   </section>
 
   <footer id='footer'>
-    <a href='http://jsconf.cn'>JSConf.cn</a>
-<a href='https://creativecommons.org/licenses/by/3.0/'>CCA 3.0 License</a>
-<a href='http://wiredcraft.com'>Built by Wiredcraft</a>
+    <a href='http://jsconf.cn' target="new">JSConf.cn</a>
+<a href='https://creativecommons.org/licenses/by/3.0/' target="new">CCA 3.0 License</a>
+<a href='http://wiredcraft.com' target="new">Built by Wiredcraft</a>
   </footer>
 
   <!-- JS -->
