--- a/en/index.html
+++ b/en/index.html
@@ -115,9 +115,9 @@
   </section>
 
   <footer id='footer'>
-    <a href='http://jsconf.cn'>JSConf.cn</a>
-<a href='https://creativecommons.org/licenses/by/3.0/'>CCA 3.0 License</a>
-<a href='http://wiredcraft.com'>Built by Wiredcraft</a>
+    <a href='http://jsconf.cn' target="new">JSConf.cn</a>
+<a href='https://creativecommons.org/licenses/by/3.0/' target="new">CCA 3.0 License</a>
+<a href='http://wiredcraft.com' target="new">Built by Wiredcraft</a>
   </footer>
 
   <!-- JS -->
