add code of conduct page to the footer link

--- a/call-for-speakers/index.html
+++ b/call-for-speakers/index.html
@@ -72,7 +72,12 @@
     </nav>
   </section>
   <footer id='footer'>
-    <a href='http://jsconf.cn' target="new">JSConf.cn</a>
+    
+
+
+
+<a href='/code-of-conduct' target="_self">Code Of Conduct</a>
+<a href='http://jsconf.cn' target="new">JSConf.cn</a>
 <a href='https://creativecommons.org/licenses/by/3.0/' target="new">CCA 3.0 License</a>
 <a href='http://wiredcraft.com' target="new">Built by Wiredcraft</a>
   </footer>
