--- a/code-of-conduct-en/index.html
+++ b/code-of-conduct-en/index.html
@@ -34,21 +34,20 @@
   <link href='/assets/styles.css' rel='stylesheet' type='text/css'/>
 </head>
 
-<body class='page-call-for-speakers-en call-for-speakers'>
+<body class='page-code-of-conduct-en code-of-conduct'>
 
   <header id='header'>
     <nav class='menu'>
       
-      <a href='/call-for-speakers'>中文</a>
+      <a href='/code-of-conduct'>中文</a>
     </nav> 
     <header class='hero'> 
       <div class='wrapper'>
         <a class='logo' href='/'></a>
         <div class='title'>
           <h1>JSConf China</h1>
-          <h1>Call for speakers</h1>
+          <h1>Code of Conduct</h1>
           <p>11th-12th July, 2015, Shenzhen, China</p>
-          <div class='arrow register button'>Submit</div>
         </div>  
       </div>  
     </header>
@@ -56,13 +55,31 @@
 
   <section id='content'>
     <div class='wrapper'>
-      <p>2014 has been a great year for JavaScript and the JavaScript community. io.js began to steal the attention from Node.js, ES6 has been making huge progress and will publish a standard this year. We saw people start to use ES6 today with tools like babel.js. With Johny Five, Tessel, we saw more possibilities of what JavaScript can do. We want to hear your thoughts on JavaScript, your experiences, and of course your mad science. You are welcome to share any topic that is related(or not) to JavaScript.</p>
+      <p></p>
+      <h3>Short Version</h3>
+      <p>ShenJS is dedicated to providing a harassment-free conference experience for everyone, regardless of gender, sexual orientation, disability, physical appearance, body size, race, or religion. We do not tolerate harassment of conference participants in any form. Sexual language and imagery is not appropriate for any conference venue, including talks. Conference participants violating these rules may be sanctioned or expelled from the conference without a refund at the discretion of the conference organizers.</p>
+
+      <h3>Long Version</h3>
+      <h4>Harassment</h4>
+      <p>Harassment includes offensive verbal comments related to gender, sexual orientation, disability, physical appearance, body size, race, religion, sexual images in public spaces, deliberate intimidation, stalking, following, harassing photography or recording, sustained disruption of talks or other events, inappropriate physical contact, and unwelcome sexual attention. Participants asked to stop any harassing behavior are expected to comply immediately.</p>
+
+      <h4>Exhibitors &amp; Sponsors</h4>
+      <p>Exhibitors in the expo hall, sponsor or vendor booths, or similar activities are also subject to the anti-harassment policy. In particular, exhibitors should not use sexualized images, activities, or other material. Booth staff (including volunteers) should not use sexualized clothing/uniforms/costumes, or otherwise create a sexualized environment.</p>
+
+      <h4>Participants</h4>
+      <p>If a participant engages in harassing behavior, the conference organizers may take any action they deem appropriate, including warning the offender or expulsion from the conference with no refund. If you are being harassed, notice that someone else is being harassed, or have any other concerns, please contact a member of conference staff immediately. Conference staff can be identified by t-shirts/special badges. Conference staff will be happy to help participants contact hotel/venue security or local law enforcement, provide escorts, or otherwise assist those experiencing harassment to feel safe for the duration of the conference. We value your attendance.</p>
+
+      <h4>Staff Contact Information</h4>
+      <p>Claire Sheng<br/> <a href='mailto:claire@wiredcraft.com'>claire@wiredcraft.com</a> <br/>+86 15901839750</p>
+
+      <h4>Venue &amp; Social Events</h4>
+      <p>We expect participants to follow these rules at all conference venues and conference-related social events.</p>
+
+      <h4>License</h4>
+      <p>This Code of Conduct was forked from the example policy from the Geek Feminism wiki, created by the Ada Initiative and other volunteers, which is under a Creative Commons Zero license.</p>
     </div> 
   </section>
 
-  <section id='register'>
-    <script src='https://jinshuju.net/f/as4lCT/embedded.js?banner=show&background=white&height=1089'></script>
-  </section>
   <section id='social'>
       <nav class='social'>
       <a class='weibo' href='http://weibo.com/JSConfChina' target='_blank'><span>Weibo</span></a>
@@ -98,6 +115,6 @@
     s.parentNode.insertBefore(t, s);
   })();
 </script>
-	
+    
 </body>
 </html>
