--- a/code-of-conduct/index.html
+++ b/code-of-conduct/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html lang='en'>
+<html lang='zh'>
 <head>
   <meta charset='utf-8'/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 
-  <title>JS conference in Shenzhen | ShenJS</title>
+  <title>JS中国开发者大会 | ShenJS</title>
 
   <meta http-equiv='Content-Language' content='en'/>
   <meta name='keywords' content='Javascript, Node.js, realtime, JSconf, Shenzhen, China, conference'/>
-  <meta name='description' content='Join us for the main Javascript conference in Shenzhen, China this summer.'/>
+  <meta name='description' content='今年夏天中国主要的JavaScript会议，我们一起在深圳'/>
   
   
   <!-- Favicons -->
@@ -34,21 +34,20 @@
   <link href='/assets/styles.css' rel='stylesheet' type='text/css'/>
 </head>
 
-<body class='page-call-for-speakers-en call-for-speakers'>
+<body class='page-code-of-conduct code-of-conduct'>
 
   <header id='header'>
     <nav class='menu'>
+      <a href='/code-of-conduct-en'>EN</a>
       
-      <a href='/call-for-speakers'>中文</a>
     </nav> 
     <header class='hero'> 
       <div class='wrapper'>
         <a class='logo' href='/'></a>
         <div class='title'>
-          <h1>JSConf China</h1>
-          <h1>Call for speakers</h1>
-          <p>11th-12th July, 2015, Shenzhen, China</p>
-          <div class='arrow register button'>Submit</div>
+          <h1>JS中国开发者大会</h1>
+          <h1>行为守则</h1>
+          <p>2015年7月11－12日，中国深圳</p>
         </div>  
       </div>  
     </header>
@@ -56,13 +55,31 @@
 
   <section id='content'>
     <div class='wrapper'>
-      <p>2014 has been a great year for JavaScript and the JavaScript community. io.js began to steal the attention from Node.js, ES6 has been making huge progress and will publish a standard this year. We saw people start to use ES6 today with tools like babel.js. With Johny Five, Tessel, we saw more possibilities of what JavaScript can do. We want to hear your thoughts on JavaScript, your experiences, and of course your mad science. You are welcome to share any topic that is related(or not) to JavaScript.</p>
+      <p></p>
+      <h3>简洁版</h3>
+      <p>深JS旨在为所有人提供一场平等的技术大会，没有性别、肤色、外表之分，亦没有种族信仰之别。大会不允许参会者有任何形式的和大会宗旨相悖的行为。会场包括演讲过程中不允许有任何骚扰到他人的言语攻击或者照片。参会者一旦被发现此类行为，将被逐出大会现场，概不退还参会费用。</p>
+
+      <h3>完整版</h3>
+      <h4>骚扰</h4>
+      <p>骚扰包括在公共场合有带性别、肤色、外表、信仰倾向的无礼的言语评论、色情图片、故意恐吓、盯梢、跟踪、骚扰摄影或者录音、持续性地打断演讲者、不恰当的身体接触以及不受欢迎的性倾向。参会者必须遵守大会守则，不出现上述行为。</p>
+
+      <h4>参展者 &amp; 赞助商</h4>
+      <p>所有会场内的参展者、赞助商以及会场工作人员等类似角色的人也都要遵守不能有骚扰他人行为的政策。特别要注意，参展者不应当使用任何带有性色彩的图片和行为。工作人员（包括志愿者)也不应当穿戴任何有性色彩的服饰/制服等。</p>
+
+      <h4>参会者</h4>
+      <p>如发现有骚扰行为的参会者，大会组织者有权采取以下正当行为予以阻止：对其进行警告、将其逐出会场，并不退还参会费用。如果你被人骚扰或者发现有人被骚扰了，请及时联系我们的工作人员大会工作人员都穿戴有统一的T恤衫和证件。大会工作人员也会很乐意帮助参会者联系酒店/会场安保人员、当地警察，阻止这类行为。为参会者提供一个安全的环境。希望你对此能够引起足够的注意。</p>
+
+      <h4>大会工作人员信息</h4>
+      <p>Claire Sheng<br/> <a href='mailto:claire@wiredcraft.com'>claire@wiredcraft.com</a> <br/>+86 15901839750</p>
+
+      <h4>会场 &amp; 社交场所</h4>
+      <p>我们希望参会者能够在所有的大会会场以及相关的社交场所遵守行为守则。</p>
+
+      <h4>许可证</h4>
+      <p>这份行为准则借鉴自Ada Initiative和其他志愿者创建的Geek Feminism wiki示例政策，遵守Creative Commons Zero许可证。</p>
     </div> 
   </section>
 
-  <section id='register'>
-    <script src='https://jinshuju.net/f/as4lCT/embedded.js?banner=show&background=white&height=1089'></script>
-  </section>
   <section id='social'>
       <nav class='social'>
       <a class='weibo' href='http://weibo.com/JSConfChina' target='_blank'><span>Weibo</span></a>
@@ -76,7 +93,7 @@
 
 
 
-<a href='/code-of-conduct-en' target="_self">Code Of Conduct</a>
+<a href='/code-of-conduct' target="_self">Code Of Conduct</a>
 <a href='http://jsconf.cn' target="new">JSConf.cn</a>
 <a href='https://creativecommons.org/licenses/by/3.0/' target="new">CCA 3.0 License</a>
 <a href='http://wiredcraft.com' target="new">Built by Wiredcraft</a>
@@ -98,6 +115,6 @@
     s.parentNode.insertBefore(t, s);
   })();
 </script>
-	
+    
 </body>
 </html>
