--- a/en/index.html
+++ b/en/index.html
@@ -101,7 +101,7 @@
   <div class='wrapper'>
     <div class='about'>
       <h2>About ShenJS</h2>
-      <p><p>JSConf China is a two day conference focused on JavaScript and Node.js technologies. This developer driven event brings together notable figures from both the Chinese and international JavaScript communities to share their knowledge and passion for JavaScript. After Shanghai, Beijing and Hangzhou, JSConf China is going to Shenzhen in the summer 2015.</p>
+      <p><p>JSConf China is a two day conference focused on JavaScript and Node.js technologies. This developer driven event brings together notable figures from both the Chinese and international JavaScript communities to share their knowledge and passion for JavaScript. After Shanghai, Beijing and Hangzhou, JSConf China is going to Shenzhen from July 11-12 in 2015.</p>
 <p>Wanna help out? <a href='https://github.com/JSConfcn/ShenJS/issues'>Join us on GitHub</a>!</p>
 <p><small><a href='http://JSConf.cn/'>Learn more about JSConf China</a></small>.</p>
 </p>
@@ -126,7 +126,7 @@
       <h2>Call for Speakers</h2>
       <p><p>2014 has been a great year for JavaScript and the JavaScript community. io.js began to steal the attention from Node.js, ES6 has been making huge progress and will publish a standard this year. We saw people start to use ES6 today with tools like babel.js. With Johny Five, Tessel, we saw more possibilities of what JavaScript can do. We want to hear your thoughts on JavaScript, your experiences, and of course your mad science. You are welcome to share any topic that is related(or not) to JavaScript.</p>
 </p>
-      <a class='button' href='/call-for-speakers-en' target='_blank'>Submit</a>
+      <a class='button' href='/call-for-speakers-en' target='_self'>Submit</a>
     </div>
   </div>
 </section>
@@ -135,7 +135,12 @@
   </section>
 
   <footer id='footer'>
-    <a href='http://jsconf.cn' target="new">JSConf.cn</a>
+    
+
+
+
+<a href='/code-of-conduct-en' target="_self">Code Of Conduct</a>
+<a href='http://jsconf.cn' target="new">JSConf.cn</a>
 <a href='https://creativecommons.org/licenses/by/3.0/' target="new">CCA 3.0 License</a>
 <a href='http://wiredcraft.com' target="new">Built by Wiredcraft</a>
   </footer>
