--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   <div class='wrapper'>
     <div class='about'>
       <h2>关于深JS</h2>
-      <p><p>深JS——2015 JS中国开发者大会是一场专注于JavaScript和Node.js技术，为期两天的国际性技术大会。届时，大会会邀请国内外的优秀讲师为大家分享在JavaScript和Node.js技术方面的经验。继上海，北京和杭州之后，JS中国开发者大会将于2015年夏天在深圳召开。</p>
+      <p><p>深JS——2015 JS中国开发者大会是一场专注于JavaScript和Node.js技术，为期两天的国际性技术大会。届时，大会会邀请国内外的优秀讲师为大家分享在JavaScript和Node.js技术方面的经验。继上海，北京和杭州之后，JS中国开发者大会将于2015年7月11－12日在深圳召开。</p>
 <p>想参与讨论？<a href='https://github.com/JSConfcn/ShenJS/issues' target="new">在GitHub上加入我们</a>！</p>
 <p><small><a href='http://JSConf.cn/' target="new">了解更多关于JS中国开发者大会</a></small></p>
 </p>
@@ -126,7 +126,7 @@
       <h2>讲师征集</h2>
       <p><p>2014年对于JavaScript和JavaScript开发者来说又是成功的一年，io.js的出现动摇了Node.js的地位，ES6有了更大的进展并有可能在今年发布正式规范，babel.js等预编译成为项目的一部分，React.js，Angular.js等前端框架的爆发，Johny Five，Tessel等项目的出现，JavaScript进入到了更多新的领域。我们期望听到更多你跟JavaScript的故事，你的实际项目经验，你使用JavaScript做的黑科技。我们欢迎你与我们分享任何与JavaScript相关的话题！</p>
 </p>
-      <a class='button' href='/call-for-speakers' target='_blank'>提交申请</a>
+      <a class='button' href='/call-for-speakers' target='_self'>提交申请</a>
     </div>
   </div>
 </section>
@@ -135,7 +135,12 @@
   </section>
 
   <footer id='footer'>
-    <a href='http://jsconf.cn' target="new">JSConf.cn</a>
+    
+
+
+
+<a href='/code-of-conduct' target="_self">Code Of Conduct</a>
+<a href='http://jsconf.cn' target="new">JSConf.cn</a>
 <a href='https://creativecommons.org/licenses/by/3.0/' target="new">CCA 3.0 License</a>
 <a href='http://wiredcraft.com' target="new">Built by Wiredcraft</a>
   </footer>
