progress on menu

--- a/index.html
+++ b/index.html
@@ -49,9 +49,13 @@
               <a>活动地点</a>
             </li>
             <li>
-              <a class="button blue">报名参加</a>
+              <a class="button blue" href="#">报名参加</a>
             </li>
           </ul>
+          <div class="option">
+            <a>EN</a>
+            
+          </div>
         </nav>
       </header>
     </div>
