--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/css/style.min.css">
   </head>
   <body class="wi-100">
-    <div class="dt pvx pvxl-ns stretch-full header">
+    <div class="dt pvx pvxl-ns stretch-full header" id="header">
       <header class="bg-pulsate tc dtc wi-100 v-mid ">
         <div class="tc mbm mbn-ns">
           <div class="logo"></div>
@@ -31,7 +31,7 @@
             报名参加
           </a>
         </div>
-        <nav class="menu">
+        <nav class="menu" id="menu">
           <ul>
             <li>
               <a>演讲嘉宾</a>
@@ -53,8 +53,10 @@
             </li>
           </ul>
           <div class="option">
-            <a>EN</a>
-            
+            <a class="language">EN</a>
+            <a class="social weibo" href="http://weibo.com/JSConfChina" target="_blank"><span>Weibo</span></a>
+            <a class="social twitter" href="http://twitter.com/jsconfcn" target="_blank"><span>Twitter</span></a>
+            <a class="social github" href="http://github.com/jsconfcn/ShenJS" target="_blank"><span>GitHub</span></a>
           </div>
         </nav>
       </header>
