--- a/call-for-speakers-en/index.html
+++ b/call-for-speakers-en/index.html
@@ -12,7 +12,7 @@
   
   
   <!-- Favicons -->
-  <link rel='shortcut icon' href='/assets/favicons/favicon.ico'>
+  <!-- <link rel='shortcut icon' href='/assets/favicons/favicon.ico'>
 <link rel='apple-touch-icon' sizes='57x57' href='/assets/favicons/apple-touch-icon-57x57.png'>
 <link rel='apple-touch-icon' sizes='114x114' href='/assets/favicons/apple-touch-icon-114x114.png'>
 <link rel='apple-touch-icon' sizes='72x72' href='/assets/favicons/apple-touch-icon-72x72.png'>
@@ -28,7 +28,7 @@
 <link rel='icon' type='image/png' href='/assets/favicons/favicon-32x32.png' sizes='32x32'>
 <meta name='msapplication-TileColor' content='#da532c'>
 <meta name='msapplication-TileImage' content='/assets/favicons/mstile-144x144.png'>
-<meta name='msapplication-config' content='/assets/favicons/browserconfig.xml'>
+<meta name='msapplication-config' content='/assets/favicons/browserconfig.xml'> -->
 
   <!-- CSS -->
   <link href='/assets/styles.css' rel='stylesheet' type='text/css'/>
@@ -72,14 +72,18 @@
     </nav>
   </section>
   <footer id='footer'>
-    
+       
+<div class='wrapper'>
+  <a href='/code-of-conduct-en' target="_self">Code Of Conduct</a>
+  <a href='http://jsconf.cn' target="new">JSConf.cn</a>
+  <a href='https://creativecommons.org/licenses/by/3.0/' target="new">CCA 3.0 License</a>
+  <a href='http://wiredcraft.com' target="new">Built by Wiredcraft</a>
+  <div class='right'>
+    <span>Follow our WeChat</span>
+    <div class='qrcode'><img src='/images/qrcode.jpg' class='img' width='50' /><img src='/images/qrcode.jpg' class='tooltip' /></div>
+  </div>
+</div>
 
-
-
-<a href='/code-of-conduct-en' target="_self">Code Of Conduct</a>
-<a href='http://jsconf.cn' target="new">JSConf.cn</a>
-<a href='https://creativecommons.org/licenses/by/3.0/' target="new">CCA 3.0 License</a>
-<a href='http://wiredcraft.com' target="new">Built by Wiredcraft</a>
   </footer>
 
   <!-- JS -->
