--- a/en/index.html
+++ b/en/index.html
@@ -51,8 +51,8 @@
         <a href='#item1'>about us</a>
         <a href='#item2'>speakers</a>
 <!--         <a href='#item3'></a> -->
-        <a href='#item4'>sponsers</a>
-        <a href='#item5'>media partner</a>
+        <a href='#item4'>sponsors</a>
+        <a href='#item5'>media partners</a>
         <a href='#item6'>venue</a>
         <a class='button buyticket'>Buy Ticket<span>Coming soon</span></a>
         <div class='right'>
@@ -116,7 +116,7 @@
   <!-- sponsers-->
   <section class='section sponsers' id='item4'>
     <div class='title'>
-      <h1>sponsers</h1>
+      <h1>sponsors</h1>
     </div>
     <div class='wrapper'>
       <ul>
@@ -153,7 +153,7 @@
   <!-- media parter-->
   <section class='section mediaparter' id='item5'>
     <div class='title'>
-      <h1>media partner</h1>
+      <h1>media partners</h1>
     </div>
     <div class='wrapper'>
       <ul>
