--- a/code-of-conduct/index.html
+++ b/code-of-conduct/index.html
@@ -83,7 +83,7 @@
   <section id='social'>
       <nav class='social'>
       <a class='weibo' href='http://weibo.com/JSConfChina' target='_blank'><span>Weibo</span></a>
-      <a class='twitter' href='http://twitter.com/jsconfcn' target='_blank'><span>Twitter</span></a>
+      <a class='twitter' href='https://twitter.com/jsconfchina' target='_blank'><span>Twitter</span></a>
       <a class='github' href='http://github.com/jsconfcn/ShenJS' target='_blank'><span>GitHub</span></a>
       <a class='slack' href='https://shenjs.herokuapp.com/' target='_blank'><span>Slack</span></a>
     </nav>
