remove call for speakers and speake vote

--- a/en/index.html
+++ b/en/index.html
@@ -98,12 +98,157 @@
     </div>
   </section>
   <!-- Speakers -->
-  <section class='section speakers' id='item2'>
+    <section class='section speakers' id='item2'>
     <div class='title'>
       <h1>speakers</h1>
     </div>
-    <a href='https://jinshuju.net/f/Dfys92' target='new' class='button'>Speaker vote</a>
-    <p>Please vote for you favourite speaker and topics</p>
+      <div class='tip'>Coming soon</div>
+<!--     <ul>
+      <li>
+        <img src='/images/speaker1.jpg' />
+        <div class='cover'>
+          <div class='info'>
+            <h4>John Doe</h4>
+            <p>User experience designer</p>
+            <a href='#' class='icon github'></a>
+            <a href='#' class='icon weibo'></a>
+          </div>
+        </div>
+        </a>
+      </li>
+      <li>
+        <img src='/images/speaker1.jpg' />
+        <div class='cover'>
+          <div class='info'>
+            <h4>John Doe</h4>
+            <p>User experience designer</p>
+            <a href='#' class='icon github'></a>
+            <a href='#' class='icon twitter'></a>
+          </div>
+        </div>
+        </a>
+      </li>
+      <li>
+        <img src='/images/speaker1.jpg' />
+        <div class='cover'>
+          <div class='info'>
+            <h4>John Doe</h4>
+            <p>User experience designer</p>
+            <a href='#' class='icon github'></a>
+            <a href='#' class='icon weibo'></a>
+          </div>
+        </div>
+        </a>
+      </li>
+      <li>
+        <img src='/images/speaker1.jpg' />
+        <div class='cover'>
+          <div class='info'>
+            <h4>John Doe</h4>
+            <p>User experience designer</p>
+            <a href='#' class='icon github'></a>
+            <a href='#' class='icon twitter'></a>
+          </div>
+        </div>
+        </a>
+      </li>
+      <li>
+        <img src='/images/speaker1.jpg' />
+        <div class='cover'>
+          <div class='info'>
+            <h4>John Doe</h4>
+            <p>User experience designer</p>
+            <a href='#' class='icon github'></a>
+            <a href='#' class='icon twitter'></a>
+          </div>
+        </div>
+        </a>
+      </li>
+      <li>
+        <img src='/images/speaker1.jpg' />
+        <div class='cover'>
+          <div class='info'>
+            <h4>John Doe</h4>
+            <p>User experience designer</p>
+            <a href='#' class='icon github'></a>
+            <a href='#' class='icon twitter'></a>
+          </div>
+        </div>
+        </a>
+      </li>
+      <li>
+        <img src='/images/speaker1.jpg' />
+        <div class='cover'>
+          <div class='info'>
+            <h4>John Doe</h4>
+            <p>User experience designer</p>
+            <a href='#' class='icon github'></a>
+            <a href='#' class='icon twitter'></a>
+          </div>
+        </div>
+        </a>
+      </li>
+      <li>
+        <img src='/images/speaker1.jpg' />
+        <div class='cover'>
+          <div class='info'>
+            <h4>John Doe</h4>
+            <p>User experience designer</p>
+            <a href='#' class='icon github'></a>
+            <a href='#' class='icon twitter'></a>
+          </div>
+        </div>
+        </a>
+      </li>
+      <li>
+        <img src='/images/speaker1.jpg' />
+        <div class='cover'>
+          <div class='info'>
+            <h4>John Doe</h4>
+            <p>User experience designer</p>
+            <a href='#' class='icon github'></a>
+            <a href='#' class='icon twitter'></a>
+          </div>
+        </div>
+        </a>
+      </li>
+      <li>
+        <img src='/images/speaker1.jpg' />
+        <div class='cover'>
+          <div class='info'>
+            <h4>John Doe</h4>
+            <p>User experience designer</p>
+            <a href='#' class='icon github'></a>
+            <a href='#' class='icon twitter'></a>
+          </div>
+        </div>
+        </a>
+      </li>
+      <li>
+        <img src='/images/speaker1.jpg' />
+        <div class='cover'>
+          <div class='info'>
+            <h4>John Doe</h4>
+            <p>User experience designer</p>
+            <a href='#' class='icon github'></a>
+            <a href='#' class='icon twitter'></a>
+          </div>
+        </div>
+        </a>
+      </li>
+      <li>
+        <img src='/images/speaker1.jpg' />
+        <div class='cover'>
+          <div class='info'>
+            <h4>John Doe</h4>
+            <p>User experience designer</p>
+            <a href='#' class='icon github'></a>
+            <a href='#' class='icon twitter'></a>
+          </div>
+        </div>
+        </a>
+      </li>
+    </ul> -->
   </section>
 
   <!-- Banner -->
