--- a/index.html
+++ b/index.html
@@ -98,12 +98,157 @@
     </div>
   </section>
   <!-- Speakers -->
-  <section class='section speakers' id='item2'>
+    <section class='section speakers' id='item2'>
     <div class='title'>
       <h1>演讲嘉宾</h1>
     </div>
-    <a href='https://jinshuju.net/f/Dfys92' target='new' class='button'>讲师投票</a>
-    <p>请为你喜爱的演讲嘉宾和话题投票</p>
+      <div class='tip'>敬请期待</div>
+<!--     <ul>
+      <li>
+        <img src='/images/speaker1.jpg' />
+        <div class='cover'>
+          <div class='info'>
+            <h4>胡痴儿</h4>
+            <p>用户体验设计师</p>
+            <a href='#' class='icon github'></a>
+            <a href='#' class='icon weibo'></a>
+          </div>
+        </div>
+        </a>
+      </li>
+      <li>
+        <img src='/images/speaker1.jpg' />
+        <div class='cover'>
+          <div class='info'>
+            <h4>胡痴儿</h4>
+            <p>用户体验设计师</p>
+            <a href='#' class='icon github'></a>
+            <a href='#' class='icon twitter'></a>
+          </div>
+        </div>
+        </a>
+      </li>
+      <li>
+        <img src='/images/speaker1.jpg' />
+        <div class='cover'>
+          <div class='info'>
+            <h4>胡痴儿</h4>
+            <p>用户体验设计师</p>
+            <a href='#' class='icon github'></a>
+            <a href='#' class='icon weibo'></a>
+          </div>
+        </div>
+        </a>
+      </li>
+      <li>
+        <img src='/images/speaker1.jpg' />
+        <div class='cover'>
+          <div class='info'>
+            <h4>胡痴儿</h4>
+            <p>用户体验设计师</p>
+            <a href='#' class='icon github'></a>
+            <a href='#' class='icon twitter'></a>
+          </div>
+        </div>
+        </a>
+      </li>
+      <li>
+        <img src='/images/speaker1.jpg' />
+        <div class='cover'>
+          <div class='info'>
+            <h4>胡痴儿</h4>
+            <p>用户体验设计师</p>
+            <a href='#' class='icon github'></a>
+            <a href='#' class='icon twitter'></a>
+          </div>
+        </div>
+        </a>
+      </li>
+      <li>
+        <img src='/images/speaker1.jpg' />
+        <div class='cover'>
+          <div class='info'>
+            <h4>胡痴儿</h4>
+            <p>用户体验设计师</p>
+            <a href='#' class='icon github'></a>
+            <a href='#' class='icon twitter'></a>
+          </div>
+        </div>
+        </a>
+      </li>
+      <li>
+        <img src='/images/speaker1.jpg' />
+        <div class='cover'>
+          <div class='info'>
+            <h4>胡痴儿</h4>
+            <p>用户体验设计师</p>
+            <a href='#' class='icon github'></a>
+            <a href='#' class='icon twitter'></a>
+          </div>
+        </div>
+        </a>
+      </li>
+      <li>
+        <img src='/images/speaker1.jpg' />
+        <div class='cover'>
+          <div class='info'>
+            <h4>胡痴儿</h4>
+            <p>用户体验设计师</p>
+            <a href='#' class='icon github'></a>
+            <a href='#' class='icon twitter'></a>
+          </div>
+        </div>
+        </a>
+      </li>
+      <li>
+        <img src='/images/speaker1.jpg' />
+        <div class='cover'>
+          <div class='info'>
+            <h4>胡痴儿</h4>
+            <p>用户体验设计师</p>
+            <a href='#' class='icon github'></a>
+            <a href='#' class='icon twitter'></a>
+          </div>
+        </div>
+        </a>
+      </li>
+      <li>
+        <img src='/images/speaker1.jpg' />
+        <div class='cover'>
+          <div class='info'>
+            <h4>胡痴儿</h4>
+            <p>用户体验设计师</p>
+            <a href='#' class='icon github'></a>
+            <a href='#' class='icon twitter'></a>
+          </div>
+        </div>
+        </a>
+      </li>
+      <li>
+        <img src='/images/speaker1.jpg' />
+        <div class='cover'>
+          <div class='info'>
+            <h4>胡痴儿</h4>
+            <p>用户体验设计师</p>
+            <a href='#' class='icon github'></a>
+            <a href='#' class='icon twitter'></a>
+          </div>
+        </div>
+        </a>
+      </li>
+      <li>
+        <img src='/images/speaker1.jpg' />
+        <div class='cover'>
+          <div class='info'>
+            <h4>胡痴儿</h4>
+            <p>用户体验设计师</p>
+            <a href='#' class='icon github'></a>
+            <a href='#' class='icon twitter'></a>
+          </div>
+        </div>
+        </a>
+      </li>
+    </ul> -->
   </section>
 
   <!-- Banner -->
